--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
+    "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix", 
     "prettier": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
     "clear-all": "rm -rf node_modules .next out dist build",
     "re-start": "rm -rf node_modules .next out dist build && yarn install && yarn start",
@@ -36,8 +36,8 @@
     "@auth0/auth0-react": "^2.1.1",
     "@aws-amplify/auth": "^5.4.1",
     "@emotion/cache": "^11.11.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fullcalendar/core": "^6.1.8",
     "@fullcalendar/daygrid": "^6.1.8",
     "@fullcalendar/interaction": "^6.1.8",
@@ -49,8 +49,9 @@
     "@hookform/resolvers": "^3.1.1",
     "@iconify/react": "^4.1.0",
     "@mui/base": "^5.0.0-beta.4",
+    "@mui/icons-material": "^5.18.0",
     "@mui/lab": "^5.0.0-alpha.134",
-    "@mui/material": "^5.13.5",
+    "@mui/material": "^5.18.0",
     "@mui/system": "^5.13.5",
     "@mui/x-data-grid": "^6.8.0",
     "@mui/x-date-pickers": "^6.8.0",
