Add blog categories and featured posts components
Introduces PostCategories and PostFeature components for the blog section. Updates the home view to display category pills and a featured insights section. Also updates PostList to support a featured layout and adjusts related files. Updates app title and manifest from 'Job Extraction' to 'Bonds'.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Job Extraction",
-  "short_name": "Job Extraction",
+  "name": "Bonds",
+  "short_name": "Bonds",
   "display": "standalone",
   "start_url": "/",
   "theme_color": "#000000",
