--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix", 
+    "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
     "prettier": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
     "clear-all": "rm -rf node_modules .next out dist build",
     "re-start": "rm -rf node_modules .next out dist build && yarn install && yarn start",
@@ -64,6 +64,8 @@
     "dayjs": "^1.11.18",
     "firebase": "^9.22.2",
     "framer-motion": "^10.12.16",
+    "highcharts": "^12.4.0",
+    "highcharts-react-official": "^3.2.2",
     "highlight.js": "^11.8.0",
     "history": "^5.3.0",
     "i18next": "^23.1.0",
