--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "apexcharts": "^5.3.4",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.4.0",
+    "chart.js": "^4.5.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.18",
     "firebase": "^9.22.2",
@@ -79,6 +80,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
